add_executable(jjgen
    adder.f90
    adder_I.f90
    blanda.f90
    blanda_I.f90
    blandb.f90
    blandb_I.f90
    blandc.f90
    blandc_I.f90
    copy7t9.f90
    copy7t9_I.f90
    fivefirst.f90
    fivefirst_I.f90
    fivelines.f90
    fivelines_I.f90
    #gen.f90
    gen_I.f90
    genb.f90
    #jjgen15.f90
    jjgen15b.f90
    kopp1.f90
    kopp1_I.f90
    kopp2.f90
    kopp2_I.f90
    lasa1.f90
    lasa1_I.f90
    lasa2.f90
    lasa2_I.f90
    #lasax-reada.f90
    lika.f90
    lika_I.f90
    lockad.f90
    lockad_I.f90
    #m.f90
    matain.f90
    matain_I.f90
    matbin.f90
    matbin_I.f90
    matcin.f90
    matcin_I.f90
    merge.f90
    merge_I.f90
    mergeb.f90
    mergeb_I.f90
    open79.f90
    open79_I.f90
    reada.f90
    reada_I.f90
    reffa.f90
    reffa_I.f90
    slug.f90
    slug_I.f90
    sluggo.f90
    sluggo_I.f90
    test.f90
    test_I.f90
)
target_link_libraries_Fortran(jjgen PUBLIC mod 9290 rang90)
install(TARGETS jjgen DESTINATION bin/)
