add_library(rang90 STATIC
    Gracah1.f90
    Gracah1_I.f90
    jthn.f90
    jthn_I.f90
    rumtjj.f90
    rumtjj_I.f90
    ittk.f90
    ittk_I.f90
    c0t5s.f90
    c0t5s_I.f90
    Rmeajj11.f90
    Rmeajj11_I.f90
    Rmeajj9.f90
    Rmeajj9_I.f90
    Rmew1jj.f90
    Rmew1jj_I.f90
    Rmew3jj.f90
    Rmew3jj_I.f90
    Rmew5jj.f90
    Rmew5jj_I.f90
    Rmew7bjj.f90
    Rmew7bjj_I.f90
    Rmew7jj.f90
    Rmew7jj_I.f90
    Rmeajj.f90
    Rmeajj_I.f90
    Rwjj.f90
    Rwjj_I.f90
    a1jj.f90
    a1jj_I.f90
    mes.f90
    mes_I.f90
    itjj.f90
    itjj_I.f90
    itjj2.f90
    itjj2_I.f90
    itjj3.f90
    itjj3_I.f90
    ixjtik.f90
    ixjtik_I.f90
    itrexg.f90
    itrexg_I.f90
    izas1.f90
    izas1_I.f90
    jfaze.f90
    jfaze_I.f90
    sixj1.f90
    sixj1_I.f90
    sixj2.f90
    sixj2_I.f90
    sixj3.f90
    sixj3_I.f90
    sixj35.f90
    sixj35_I.f90
    dracah.f90
    dracah_I.f90
    sixj4.f90
    sixj4_I.f90
    sixj5.f90
    sixj5_I.f90
    sixj.f90
    sixj_I.f90
    awp1.f90
    awp1_I.f90
    w1jjg.f90
    w1jjg_I.f90
    wap1jjg.f90
    wap1jjg_I.f90
    c1e0sm.f90
    c1e0sm_I.f90
    c1e1sm.f90
    c1e1sm_I.f90
    cle0sm.f90
    cle0sm_I.f90
    wj1.f90
    wj1_I.f90
    ww1.f90
    ww1_I.f90
    wap1.f90
    wap1_I.f90
    awp1jjg.f90
    awp1jjg_I.f90
    coulom.f90
    coulom_I.f90
    nine0.f90
    nine0_I.f90
    nine.f90
    nine_I.f90
    diaga1.f90
    diaga1_I.f90
    diaga2.f90
    diaga2_I.f90
    diaga3.f90
    diaga3_I.f90
    diaga4.f90
    diaga4_I.f90
    diaga5.f90
    diaga5_I.f90
    eile.f90
    eile_I.f90
    reco2.f90
    reco2_I.f90
    reco3.f90
    reco3_I.f90
    reco4.f90
    reco4_I.f90
    reco.f90
    reco_I.f90
    rec3.f90
    rec3_I.f90
    nmtejj.f90
    nmtejj_I.f90
    perko1.f90
    perko1_I.f90
    perko2.f90
    perko2_I.f90
    snrc.f90
    snrc_I.f90
    gg1112.f90
    gg1112_I.f90
    gg1122.f90
    gg1122_I.f90
    gg12.f90
    gg12_I.f90
    gg1222.f90
    gg1222_I.f90
    gg1233.f90
    gg1233_I.f90
    gg1234.f90
    gg1234_I.f90
    el1.f90
    el1_I.f90
    el2.f90
    el2_I.f90
    el31.f90
    el31_I.f90
    el32.f90
    el32_I.f90
    el33.f90
    el33_I.f90
    el3.f90
    el3_I.f90
    el41.f90
    el41_I.f90
    el4.f90
    el4_I.f90
    el51.f90
    el51_I.f90
    el52.f90
    el52_I.f90
    el53.f90
    el53_I.f90
    el5.f90
    el5_I.f90
    recop1.f90
    recop1_I.f90
    recop2.f90
    recop2_I.f90
    recop00.f90
    recop00_I.f90
    oneparticlejj1.f90
    oneparticlejj1_I.f90
    oneparticlejj2.f90
    oneparticlejj2_I.f90
    oneparticlejj.f90
    oneparticlejj_I.f90
    recoonescalar.f90
    recoonescalar_I.f90
    onescalar1.f90
    onescalar1_I.f90
    onescalar2.f90
    onescalar2_I.f90
    onescalar.f90
    onescalar_I.f90
    rkco_gg.f90
    rkco_gg_I.f90
    suwjj.f90
    suwjj_I.f90
)
setup_fortran_modules(rang90)
target_link_libraries_Fortran(rang90 PRIVATE mod 9290 mcp90)
